provisioning/manifests/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: idctfg.k8s.es
    http:
      paths:
      - path: /grafana
        pathType: Exact
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
      - path: /prometheus
        pathType: Exact
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
